actualizacion de materiales hecha

--- a/html/material-by-id.html
+++ b/html/material-by-id.html
@@ -37,6 +37,7 @@
                     <li>Tamaño<p id="material-tamanio"></p></li>
                     <li>Unidad<p id="material-unidad"></p></li>
                     <li>Clasificación<p id="material-clasificacion"></p></li>
+                    <li>Características especiales<p id="material-caract_esp"></p></li>
                     <a id="update-button" class="btn btn-primary mb-4">Actualizar</a>
                 </ul>
             </div>
