--- a/html/equipo-update.html
+++ b/html/equipo-update.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:;"> -->
-    <meta name="description" content="MaterialView">
+    <meta name="description" content="equipo-update">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/index.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/material-by.id.css">
-    <title>Actualizar material</title>
+    <title>Actualizar equipo</title>
     <script src="../js/helpers/navigationComponent.js" type="module"></script>
 </head>
 
@@ -22,11 +22,11 @@
     </script>
 
     <div class="container pt-4">
-        <a class="btn btn-success mb-4" href="material-view.html">Volver</a>
+        <a class="btn btn-success mb-4" href="equipo-lab.html">Volver</a>
 
         <div class="example-container">
         <div class="img-container">
-            <img src="" alt="materialbyid" id="img-material">
+            <img src="" alt="equipobyid" id="img-equipo">
         </div>
 
         <div class="title-img-and-info">
@@ -34,39 +34,33 @@
             <div class="info">
 
                 <div class="form-group">
-                    <label for="material-imagen">Imagen:</label>
-                    <input type="file" class="form-control" id="material-imagen">
-                    <!-- <input type="file" id="file-input"> -->
+                    <label for="equipo-imagen">Imagen:</label>
+                    <input type="file" class="form-control" id="equipo-imagen">
                   </div>                
 
                 <div class="form-group">
-                    <label for="material-nombre">Nombre:</label>
-                    <input type="text" class="form-control" id="material-nombre">
-                </div>
-                
-                <div class="form-group">
-                    <label for="material-clasificacion">Clasificación:</label>
-                    <input type="text" class="form-control" id="material-clasificacion">
+                    <label for="equipo-nombre">Nombre:</label>
+                    <input type="text" class="form-control" id="equipo-nombre">
                 </div>
 
                 <div class="form-group">
-                    <label for="material-cantidad">Cantidad:</label>
-                    <input type="number" class="form-control" id="material-cantidad">
+                    <label for="equipo-cantidad">Cantidad:</label>
+                    <input type="number" class="form-control" id="equipo-cantidad">
                 </div>
 
                 <div class="form-group">
-                    <label for="material-tamanio">Tamaño:</label>
-                    <input type="text" class="form-control" id="material-tamanio">
+                    <label for="equipo-practica">Práctica:</label>
+                    <input type="text" class="form-control" id="equipo-practica">
                 </div>
 
                 <div class="form-group">
-                    <label for="material-unidades">Unidades:</label>
-                    <input type="text" class="form-control" id="material-unidades">
+                    <label for="equipo-material">Material:</label>
+                    <input type="text" class="form-control" id="equipo-material">
                 </div>
 
                 <div class="form-group">
-                    <label for="material-caract_esp">Características Especiales:</label>
-                    <textarea class="form-control" id="material-caract_esp" rows="3"></textarea>
+                    <label for="equipo-unidades">Unidades:</label>
+                    <input type="text" class="form-control" id="equipo-unidades">
                 </div>
 
                 <button id="btn-update" class="btn btn-info mt-2">Actualizar</button>
