--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
 
             <div class="card-home">
                 <div class="container-img">
-                    <a href="practica.html">
+                    <a href="equipo-lab.html">
                         <img src="../imagens/reactivos.jpg" class="card-img-top" alt="...">
                     </a>
                 </div>
@@ -70,7 +70,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Equipo</h5>
                     <p class="card-text">Registrar el equipo del laboratorio</p>
-                    <a href="practica.html" class="btn btn-primary" id="practica">Ir a prácticas</a>
+                    <a href="equipo-lab.html" class="btn btn-primary" id="practica">Ir a prácticas</a>
                 </div>
             </div>
 
