--- a/html/practica.html
+++ b/html/practica.html
@@ -66,7 +66,7 @@
             </form>
         </div>
 
-        <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4 bg-white">
+        <!-- <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4 bg-white text-black">
             <h3>Listado de Practicas</h3>
             <h4 class="pt-3" id="subtitle"></h4>
             <table class="table table-dark table-striped table-md" id="table-practicas">
@@ -80,10 +80,28 @@
                     </tr>
                 </thead>
                 <tbody id="mylist">
-                    <!-- info -->
+
                 </tbody>
             </table>
+        </div> -->
+
+        <div class="contenedor">
+            <h2 class="pt-2" id="title"></h2>
+        <div class="contenedor-cards pt-2 pb-5" id="listado-practicas">
+             <!-- <div class="card">
+                    <div class="card-container">
+                        <img src="../uploads/image_1687126354288.jpeg" alt="img-1" />
+                    </div>
+                    <div class="contenido-card">
+                        <p>Material</p>
+                    </div>
+                </div>
+            -->
         </div>
+        </div>
+
+
+
     </div>
 
     <script src="../js/practica.js"></script>
