refactor: delete dummy code

--- a/html/practica.html
+++ b/html/practica.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:;"> -->
     <meta name="description" content="MaterialView">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/index.css" rel="stylesheet" type="text/css">
@@ -66,41 +65,12 @@
             </form>
         </div>
 
-        <!-- <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4 bg-white text-black">
-            <h3>Listado de Practicas</h3>
-            <h4 class="pt-3" id="subtitle"></h4>
-            <table class="table table-dark table-striped table-md" id="table-practicas">
-                <thead>
-                    <tr>
-                        <th class="centrado">Nombre</th>
-                        <th class="centrado">Fecha</th>
-                        <th class="centrado">Materiales</th>
-                        <th class="centrado">Descripción</th>
-                        <th class="centrado" colspan="2">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody id="mylist">
-
-                </tbody>
-            </table>
-        </div> -->
-
-        <div class="contenedor">
+        <div class="contenedor" style="margin-left: 1rem;">
             <h2 class="pt-2" id="title"></h2>
-        <div class="contenedor-cards pt-2 pb-5" id="listado-practicas">
-             <!-- <div class="card">
-                    <div class="card-container">
-                        <img src="../uploads/image_1687126354288.jpeg" alt="img-1" />
-                    </div>
-                    <div class="contenido-card">
-                        <p>Material</p>
-                    </div>
-                </div>
-            -->
-        </div>
-        </div>
+            <div class="contenedor-cards pt-2 pb-5" id="listado-practicas">
 
-
+            </div>
+        </div>
 
     </div>
 
