vista y funcionalidad de reactivos comenzada

--- a/html/practica.html
+++ b/html/practica.html
@@ -41,23 +41,22 @@
                     <input type="date" class="form-control" id="fecha" placeholder="Fecha" autofocus>
                 </div>
 
-                <div class="mb-2">
+                <!-- <div class="mb-2">
                     <label for="materiales">Materiales disponibles</label>
                     <div class="select-container">
                         <select class="form-select" id="materiales" multiple>
-                            <!-- opciones de materiales -->
                         </select>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="mb-2">
+                <!-- <div class="mb-2">
                     <label for="cantidad" class="">Cantidad</label>
                     <input type="number" class="form-control" id="cantidad" placeholder="Cantidad" autofocus>
-                </div>
+                </div> -->
 
-                <div class="mb-2">
+                <!-- <div class="mb-2">
                     <button class="btn btn-success btn-sm" type="button" id="agregarMaterial">Agregar Material</button>
-                </div>
+                </div> -->
 
                 <div class="d-grid gap-2">
                     <button class="btn btn-primary" type="button" id="btnform">Guardar práctica</button>
