--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -20,7 +20,7 @@
   </script>
 
     <div class="container my-3 text-black">
-        <div class="row">
+        <div class="general">
             <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2 py-4 bg-white">
                 <input type="text" id="idreactivo" hidden>
                 <h2>Reactivos</h2>
@@ -84,7 +84,7 @@
                 </form>
 
             </div>
-            <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4  text-bg-dark">
+            <!-- <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10 py-4  text-bg-dark">
                 <h3>Lista de reactivos</h3>
                 <h4 class="pt-3" id="subtitle"></h4>
                 <table class="table table-reactivos table-dark  table-md">
@@ -103,12 +103,19 @@
                         </tr>
                     </thead>
                     <tbody id="mylist">
-                        <!-- info -->
 
                     </tbody>
                 </table>
+            </div> -->
 
+            <div class="contenedor" style="margin-left: 1rem;">
+                <h2 class="pt-2" id="title"></h2>
+                <div class="contenedor-cards pt-2 pb-5" id="listado-reactivos">
+    
+                </div>
             </div>
+    
+
         </div>
 
     </div>
