reactivos section done

--- a/html/reactivo-by-id.html
+++ b/html/reactivo-by-id.html
@@ -8,7 +8,7 @@
     <link href="../css/index.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/material-by.id.css">
-    <title>Reactivos</title>
+    <title>Reactivo</title>
     <script src="../js/helpers/navigationComponent.js" type="module"></script>
 </head>
 
@@ -36,16 +36,17 @@
                     <li>Cantidad<p id="reactivo-cantidad"></p></li>
                     <li>Unidad<p id="reactivo-unidad"></p></li>
                     <li>Piezas<p id="reactivo-piezas"></p></li>
-                    <li>Código<p id="reactivo-código"></p></li>
-                    <li>Rojo<p id="reactivo-rojo"></p></li>
-                    <li>Amarillo<p id="reactivo-amarillo"></p></li>
-                    <li>Blanco<p id="reactivo-blanco"></p></li>
+                    <li>Código azul<p id="reactivo-cod_azul"></p></li>
+                    <li>Código rojo<p id="reactivo-cod_rojo"></p></li>
+                    <li>Código amarillo<p id="reactivo-cod_amarillo"></p></li>
+                    <li>Código blanco<p id="reactivo-cod_blanco"></p></li> 
+
                     <a id="update-button" class="btn btn-primary mb-4">Editar</a>
                 </ul>
             </div>
         </div>
     </div>
-    <script src="../js/lab/equipo-by-id.js"></script>
+    <script src="../js/reactivo/reactivo-by-id.js"></script>
 </body>
 
 </html>
