--- a/html/reactivo-update.html
+++ b/html/reactivo-update.html
@@ -27,9 +27,18 @@
             <a class="btn btn-success mb-4" href="reactivo.html">Volver</a>
         </div>
         <div class="example-container">
+            <div class="img-container">
+                <img src="" alt="reactivolbyid" id="reactivo-img">
+            </div>
              <div class="title-img-and-info">
             
                <div class="info">
+
+                    <div class="form-group">
+                        <label for="reactivo-imagen">Imagen:</label>
+                        <input type="file" class="form-control" id="reactivo-imagen">
+                    </div>
+
                     <div class="form-group">
                         <label for="reactivo-nombre">Grupos:</label>
                         <input type="text" class="form-control" id="reactivo-grupos">
