--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -76,6 +76,7 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <input type="file" class="form-control file-input" accept="image/*" id="imagen">
                     </div><br>
                     <div class="d-grid gap-2">
                         <button class="btn btn-primary" type="button" id="btnform">Guardar</button>
@@ -109,7 +110,7 @@
             </div> -->
 
             <div class="contenedor" style="margin-left: 1rem;">
-                <h2 class="pt-2" id="title"></h2>
+                <h2 class="pt-2 text-white" id="title"></h2>
                 <div class="contenedor-cards pt-2 pb-5" id="listado-reactivos">
     
                 </div>
