practicas images crud done

--- a/html/practica.html
+++ b/html/practica.html
@@ -21,9 +21,9 @@
     </script>
 
     <div class="general">
-        <div class="bg-white form-container">
-            <h3>Prácticas</h3>
-            <form class="text-black">
+        <div class="form-container">
+            <h3 class="px-4">Crea una práctica</h3>
+            <form class="">
                 <div class="mb-2">
                     <label for="nombre" class="">Nombre de la práctica</label>
                     <input type="text" class="form-control" id="nombre" placeholder="ej. Termoquímica" autofocus>
@@ -36,9 +36,14 @@
                     <!-- <input type="text" class="form-control" id="descripcion" placeholder="" autofocus> -->
                 </div>
 
-                <div class="mb-4">
+                <div class="mb-2">
                     <label for="fecha" class="form-label">Fecha</label>
                     <input type="date" class="form-control" id="fecha" placeholder="Fecha" autofocus>
+                </div>
+
+                <div class="mb-4">
+                    <label for="imagen" class="form-label">Imagen</label>
+                    <input type="file" class="form-control file-input" accept="image/*" id="imagen">
                 </div>
 
                 <!-- <div class="mb-2">
