more reactivos images added x3

--- a/html/material-update.html
+++ b/html/material-update.html
@@ -75,7 +75,7 @@
     </div>
 
     </div>
-    <script src="../js/lab/equipo-update.js"></script>
+    <script src="../js/material/material-update.js"></script>
 </body>
 
 </html>
