--- a/html/material-view.html
+++ b/html/material-view.html
@@ -26,7 +26,7 @@
 
             <form>
                 <div class="input-group mb-3">
-                  <input type="text" class="form-control" placeholder="Nombre.." aria-label="Buscar" aria-describedby="boton-buscar" id="busqueda-input">
+                  <input type="text" class="form-control" placeholder="Buscar por nombre" aria-label="Buscar" aria-describedby="boton-buscar" id="busqueda-input">
                   <div class="input-group-append">
                     <button class="btn btn-primary" type="button" id="boton-buscar">Buscar</button>
                   </div>
