--- a/html/practica-by-id.html
+++ b/html/practica-by-id.html
@@ -35,7 +35,7 @@
                 <ul>
                     <li>Fecha<p id="practica-fecha"></p></li>
                     <li>Descripción<p id="practica-desc"></p></li>
-                    <a id="update-button" class="btn btn-primary mb-4">Actualizar</a>
+                    <a id="update-button" class="btn btn-primary mb-4">Editar</a>
                 </ul>
             </div>
         </div>
