--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Ejemplo de una aplicación">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laboratorio de química</title>
+    <title>Reactivos</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/interfaz.css">
     <script src="../js/helpers/navigationComponent.js" type="module"></script>
@@ -22,9 +22,9 @@
         <div class="general">
             <div class="form-container">
                 <input type="text" id="idreactivo" hidden>
-                <h2>Reactivos</h2>
-
+                
                 <form>
+                    <h2>Reactivos</h2>
                     <div class="input-group mb-3">
                       <input type="text" class="form-control" placeholder="Grupo o nombre" aria-label="Buscar" aria-describedby="boton-buscar" id="busqueda-input">
                       <div class="input-group-append">
