--- a/html/practica.html
+++ b/html/practica.html
@@ -22,7 +22,16 @@
 
     <div class="general">
         <div class="form-container">
-            <h3 class="px-4">Crea una práctica</h3>
+            <form>
+                <h3>Crea una práctica</h3>
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Buscar práctica" aria-label="Buscar" aria-describedby="boton-buscar" id="busqueda-input">
+                  <div class="input-group-append">
+                    <button class="btn btn-primary" type="button" id="boton-buscar">Buscar</button>
+                  </div>
+                </div>
+            </form>
+
             <form class="">
                 <div class="mb-2">
                     <label for="nombre" class="">Nombre de la práctica</label>
@@ -32,7 +41,7 @@
                 <div class="mb-2">
 
                     <label for="descripcion" class="form-label">Descripción de la práctica</label>
-                    <textarea id="descripcion" name="descripcion" rows="2"></textarea>
+                    <textarea class="w-100" id="descripcion" name="descripcion" rows="2"></textarea>
                     <!-- <input type="text" class="form-control" id="descripcion" placeholder="" autofocus> -->
                 </div>
 
