more reactivos images added x4

--- a/html/equipo-lab.html
+++ b/html/equipo-lab.html
@@ -33,6 +33,7 @@
             </form>
 
             <form id="material-form">
+                <h2>Crea equipos</h2>
                 <div class="mb-2">
                     <label for="nombre" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="nombre" placeholder="ej. Juego de montaje de stm para química analitica" autofocus>
