--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -24,9 +24,8 @@
                 <input type="text" id="idreactivo" hidden>
                 
                 <form>
-                    <h2>Reactivos</h2>
                     <div class="input-group mb-3">
-                      <input type="text" class="form-control" placeholder="Grupo o nombre" aria-label="Buscar" aria-describedby="boton-buscar" id="busqueda-input">
+                      <input type="text" class="form-control" placeholder="Buscar por grupo o nombre" aria-label="Buscar" aria-describedby="boton-buscar" id="busqueda-input">
                       <div class="input-group-append">
                         <button class="btn btn-primary" type="button" id="boton-buscar">Buscar</button>
                       </div>
@@ -34,6 +33,8 @@
                 </form>
 
                 <form>
+                    <h2>Agrega reactivos</h2>
+
                     <div class="mb-0">
                         <label for="grupos" class="form-label">Grupos</label>
                         <input type="text" class="form-control" id="grupos" placeholder="Metal" autofocus>
