--- a/html/material-by-id.html
+++ b/html/material-by-id.html
@@ -38,7 +38,7 @@
                     <li>Unidad<p id="material-unidad"></p></li>
                     <li>Clasificación<p id="material-clasificacion"></p></li>
                     <li>Características especiales<p id="material-caract_esp"></p></li>
-                    <a id="update-button" class="btn btn-primary mb-4">Actualizar</a>
+                    <a id="update-button" class="btn btn-primary mb-4">Editar</a>
                 </ul>
             </div>
         </div>
