--- a/html/reactivo-by-id.html
+++ b/html/reactivo-by-id.html
@@ -36,10 +36,12 @@
                     <li>Cantidad<p id="reactivo-cantidad"></p></li>
                     <li>Unidad<p id="reactivo-unidad"></p></li>
                     <li>Piezas<p id="reactivo-piezas"></p></li>
-                    <li>Código azul<p id="reactivo-cod_azul"></p></li>
-                    <li>Código rojo<p id="reactivo-cod_rojo"></p></li>
-                    <li>Código amarillo<p id="reactivo-cod_amarillo"></p></li>
-                    <li>Código blanco<p id="reactivo-cod_blanco"></p></li> 
+                    <div class="colors-code-container">
+                        <li style="color: rgb(42, 115, 250);">Código azul<p id="reactivo-cod_azul"></p></li>
+                        <li style="color: red;">Código rojo<p id="reactivo-cod_rojo"></p></li>
+                        <li style="color: yellow;">Código amarillo<p id="reactivo-cod_amarillo"></p></li>
+                        <li style="color: white;">Código blanco<p id="reactivo-cod_blanco"></p></li> 
+                    </div>
 
                     <a id="update-button" class="btn btn-primary mb-4">Editar</a>
                 </ul>
