--- a/html/reactivo.html
+++ b/html/reactivo.html
@@ -37,24 +37,24 @@
 
                     <div class="mb-0">
                         <label for="grupos" class="form-label">Grupos</label>
-                        <input type="text" class="form-control" id="grupos" placeholder="Metal" autofocus>
+                        <input type="text" class="form-control" id="grupos" placeholder="ej. Metal" autofocus>
                     </div>
                     <div class="mb-0">
                         <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Cloruro de sodio" autofocus>
+                        <input type="text" class="form-control" id="nombre" placeholder="ej. Cloruro de sodio" autofocus>
 
                     </div>
                     <div class="mb-0">
                         <label for="cantidad" class="form-label">Cantidad</label>
-                        <input type="number" class="form-control" id="cantidad" placeholder="100">
+                        <input type="number" class="form-control" id="cantidad" placeholder="ej. 100">
                     </div>
                     <div class="mb-0">
                         <label for="unidad" class="form-label">Unidad</label>
-                        <input type="text" class="form-control" id="unidad" placeholder="ml">
+                        <input type="text" class="form-control" id="unidad" placeholder="ej. ml">
                     </div>
                     <div class="mb-0">
                         <label for="piezas" class="form-label">Piezas</label>
-                        <input type="text" class="form-control" id="piezas" placeholder="2 piezas">
+                        <input type="text" class="form-control" id="piezas" placeholder="ej. 2 piezas">
                     </div>
 
                     <div class="my-1">
